--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "backend-test": "nyc --nycrc-path .nycrc-backend mocha",
     "frontend-instrument": "xcopy public instrumented /I /E /Y & nyc instrument public instrumented",
     "frontend-test": "rmdir -r .nyc_output & nyc --nycrc-path .nycrc-frontend cypress run",
-    "frontend-test-edge": "rmdir -r .nyc_output & nyc --nycrc-path .nycrc-frontend cypress run --browser edge"
-
+    "frontend-test-edge": "rmdir -r .nyc_output & nyc --nycrc-path .nycrc-frontend cypress run --browser edge", 
+    "frontend-test-chrome": "nyc --nycrc-path .nycrc-frontend cypress run --browser chrome"
   },
   "author": "",
   "license": "ISC",
@@ -22,7 +22,8 @@
     "express": "^4.21.1",
     "fs": "^0.0.1-security",
     "mocha": "^10.8.2",
-    "nyc": "^17.1.0"
+    "nyc": "^17.1.0",
+    "sinon": "^19.0.2"
   },
   "keywords": []
 }
