--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "frontend-instrument": "xcopy public instrumented /I /E /Y & nyc instrument public instrumented",
     "frontend-test": "rmdir -r .nyc_output & nyc --nycrc-path .nycrc-frontend cypress run",
     "frontend-test-edge": "rmdir -r .nyc_output & nyc --nycrc-path .nycrc-frontend cypress run --browser edge", 
-    "frontend-test-chrome": "nyc --nycrc-path .nycrc-frontend cypress run --browser chrome"
+    "frontend-test-chrome": "rmdir -r .nyc_output & nyc --nycrc-path .nycrc-frontend cypress run --browser chrome"
   },
   "author": "",
   "license": "ISC",
