--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,41 @@
+version: '3.7'
+
 services:
   build-rms:
     build:
       context: .
-      dockerfile: Dockerfile 
+      dockerfile: Dockerfile
     image: memberlite/rms-docker-img:v7
     container_name: rms-docker-container-ecologea
     ports:
-      - "8000:5050" 
+      - "8000:5050"
+    networks:
+      - monitoring
+
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml  # Make sure to adjust the path to your local prometheus.yml
+    networks:
+      - monitoring
+    depends_on:
+      - build-rms
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin  # You can change this to a more secure password
+    networks:
+      - monitoring
+    depends_on:
+      - prometheus
+
+networks:
+  monitoring:
+    driver: bridge
