--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,7 +18,7 @@ services:
     ports:
       - "9090:9090"
     volumes:
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml  # Make sure to adjust the path to your local prometheus.yml
+      - C:\Users\Poly\poly\Devops\Ecologea\prometheus.yml
     networks:
       - monitoring
     depends_on:
@@ -30,7 +30,7 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - GF_SECURITY_ADMIN_PASSWORD=admin  # You can change this to a more secure password
+      - GF_SECURITY_ADMIN_PASSWORD=admin
     networks:
       - monitoring
     depends_on:
