--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,8 +9,6 @@ services:
     container_name: rms-docker-container-ecologea
     ports:
       - "8000:5050"
-    networks:
-      - monitoring
 
   prometheus:
     image: prom/prometheus:latest
@@ -18,11 +16,8 @@ services:
     ports:
       - "9090:9090"
     volumes:
-      - C:\Users\Poly\poly\Devops\Ecologea\prometheus.yml
-    networks:
-      - monitoring
-    depends_on:
-      - build-rms
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+
 
   grafana:
     image: grafana/grafana:latest
@@ -31,11 +26,3 @@ services:
       - "3000:3000"
     environment:
       - GF_SECURITY_ADMIN_PASSWORD=admin
-    networks:
-      - monitoring
-    depends_on:
-      - prometheus
-
-networks:
-  monitoring:
-    driver: bridge
